frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: kisanhaat-frontend
  template:
    metadata:
      labels:
        app: kisanhaat-frontend
    spec:
      containers:
      - name: frontend
        image: adityaydv10/kisanhaat-frontend:1.0
        imagePullPolicy: IfNotPresent    
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
spec:
  selector:
    app: kisanhaat-frontend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: LoadBalancer
