ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kisanhaat-ingress
  namespace: kisanhaat
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "10m"
spec:
  ingressClassName: nginx
  rules:
  - host: kisanhaat.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend-service
            port:
              number: 80
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: backend-service
            port:
              number: 8080
  tls:
  - hosts:
    - kisanhaat.com
    secretName: kisanhaat-tls
